start using vite as build tool

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "esnext",
     "useDefineForClassFields": true,
-    "outDir": "src/dist",
+    "outDir": "./dist",
     "module": "esnext",
     "moduleResolution": "node",
     "strict": true,
