--- a/package.json
+++ b/package.json
@@ -2,8 +2,20 @@
   "name": "@wembat/client",
   "version": "0.0.1",
   "author": "Lukas Marschall <mail@lmarschall.com>",
-  "main": "src/dist/index.js",
+  "main": "./dist/wembat-client.umd.js",
+  "module": "./dist/wembat-client.mjs",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/wembat-client.mjs",
+      "require": "./dist/wembat-client.umd.js"
+    }
+  },
+  "files": ["dist"],
   "license": "MIT",
+  "keywords": [
+    "webauthn"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lmarschall/wembat.git"
@@ -13,7 +25,8 @@
     "access": "public"
   },
   "scripts": {
-    "build": "tsc",
+    "dev": "vite",
+    "build": "tsc && vite build",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix ./src/*.ts",
     "format": "prettier ./src --write",
     "prepublish": "npm run build"
@@ -24,13 +37,16 @@
     "axios": "^1.6.1"
   },
   "devDependencies": {
+    "@types/node": "^20.9.0",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "typescript": "^4.5.4",
+    "gzipper": "^7.1.0",
     "prettier": "2.7.1",
-    "gzipper": "^7.1.0"
+    "typescript": "^4.5.4",
+    "vite": "^4.5.0",
+    "vite-plugin-dts": "^3.6.3"
   }
 }
