--- a/vue-example/package.json
+++ b/vue-example/package.json
@@ -12,18 +12,19 @@
   },
   "dependencies": {
     "@simplewebauthn/browser": "^8.0.2",
+    "@wembat/client": "file:..",
     "axios": "^1.4.0",
     "bootstrap": "^5.1.3",
     "vue": "^3.2.25",
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
+    "@simplewebauthn/typescript-types": "^7.4.0",
     "@types/bootstrap": "^5.1.12",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/eslint-config-typescript": "^11.0.2",
-    "@simplewebauthn/typescript-types": "^7.4.0",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
