--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
       "require": "./dist/wembat-client.umd.js"
     }
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "license": "MIT",
   "keywords": [
     "webauthn"
@@ -29,7 +31,10 @@
     "build": "tsc && vite build",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix ./src/*.ts",
     "format": "prettier ./src --write",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run"
   },
   "dependencies": {
     "@simplewebauthn/browser": "^8.0.2",
@@ -47,6 +52,8 @@
     "prettier": "2.7.1",
     "typescript": "^4.5.4",
     "vite": "^4.5.0",
-    "vite-plugin-dts": "^3.6.3"
+    "vite-plugin-dts": "^3.6.3",
+    "vitepress": "^1.0.0-rc.34",
+    "vitest": "^1.1.1"
   }
 }
