created bootstrap documentation

--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "prepublish": "npm run build",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:run": "vitest run"
+    "test:run": "vitest run",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
     "@simplewebauthn/browser": "^8.0.2",
