added typedoc documentation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,15 @@
     "lib": ["esnext", "dom"],
     "skipLibCheck": true
   },
+  "typedocOptions": { 
+    "entryPoints": [ 
+      "./src/index.ts",
+    ],
+    "plugin": ["typedoc-plugin-markdown", "typedoc-vitepress-theme"],
+    "theme": "vitepress",
+    "includes": "src",
+    "out": "docs/client"
+  },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
