--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
+    "docs": "typedoc",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
@@ -53,6 +54,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "gzipper": "^7.1.0",
     "prettier": "2.7.1",
+    "typedoc": "^0.25.6",
+    "typedoc-plugin-markdown": "^4.0.0-next.38",
+    "typedoc-vitepress-theme": "^1.0.0-next.4",
     "typescript": "^4.5.4",
     "vite": "^4.5.0",
     "vite-plugin-dts": "^3.6.3",
