--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -25,8 +25,10 @@ services:
         image: pwahub-api
         build: "./"
         restart: always
+        command: ""
         ports:
             - 8080:8080
+            - 5555:5555
         environment:
             - "RPID=localhost"
             - "PORT=${API_PORT}"
