created database migrations

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,15 @@
-FROM node:18
-
-# install simple http server for serving static content
-RUN npm install -g http-server
+FROM node:20.10
 
 # make the 'app' folder the current working directory
 WORKDIR /app
 
-# copy both 'package.json' and 'package-lock.json' (if available)
+# copy both 'package.json' and 'package-lock.json'
 COPY package*.json ./
 
 # install project dependencies
 RUN npm install
 
-# copy project files and folders to the current working directory (i.e. 'app' folder)
+# copy project files and folders to the current working directory
 COPY . .
 
 # generate prisma models for prisma client
@@ -21,5 +18,7 @@ RUN npx prisma generate
 # build app for production with minification
 RUN npm run build
 
+# expose api port
 EXPOSE 8080
-CMD [ "npm", "run", "start" ]
+
+CMD ["/bin/bash", "/app/entrypoint.sh"]
