--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "start": "node dist/app.js",
     "serve": "tsc && node dist/app.js",
-    "lint": "tslint -c tslint.json 'src/**/*.ts'",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix ./src/**/*.ts",
+    "format": "prettier ./src/**/*.ts --write",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -35,10 +36,15 @@
   "devDependencies": {
     "@simplewebauthn/typescript-types": "^7.4.0",
     "@types/express": "^4.17.13",
-    "@types/node": "^17.0.18",
     "prisma": "^3.13.0",
     "ts-node": "^10.5.0",
-    "tslint": "^6.1.3",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "@types/node": "^20.9.0",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
+    "eslint": "^8.24.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "2.7.1"
   }
 }
