--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix ./src/*.ts",
-    "format": "prettier ./src --write",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix ./src/**/*.ts",
+    "format": "prettier ./src/**/*.ts --write",
     "prepublish": "npm run build",
     "test": "vitest",
     "test:ui": "vitest --ui",
