starting to create install script

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,1 +1,5 @@
+API_PORT=8080
+API_URL=http://localhost:8080
+APP_DOMAINS=localhost:3000, localhost:3001, localhost:3002
 API_DATABASE_URL=postgres://postgres:postgres@postgres:5432/testdb?connect_timeout=300
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/testdb # for prisma schema
