fixing env stuff

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,5 +1,13 @@
-API_PORT=8080
-API_URL=http://localhost:8080
-APP_DOMAINS=localhost:3000, localhost:3001, localhost:3002
-API_DATABASE_URL=postgres://postgres:postgres@postgres:5432/testdb?connect_timeout=300
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/testdb # for prisma schema
+# wembat template environment file
+
+# database
+DATABASE_POSTGRES_USER=PLACEHOLDER_DATABASE_POSTGRES_USER
+DATABASE_POSTGRES_PASSWORD=PLACEHOLDER_DATABASE_POSTGRES_PASSWORD
+DATABASE_POSTGRES_DB=PLACEHOLDER_DATABASE_POSTGRES_DB
+DATABASE_POSTGRES_PORT=PLACEHOLDER_DATABASE_POSTGRES_PORT
+DATABASE_URL=PLACEHOLDER_DATABASE_URL
+
+# api
+API_SERVER_URL=PLACEHOLDER_API_SERVER_URL
+API_APP_DOMAINS=PLACEHOLDER_API_APP_DOMAINS
+API_DATABASE_URL=PLACEHOLDER_API_DATABASE_URL
