--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -6,15 +6,15 @@ volumes:
 services:
     postgres:
         image: postgres:13-alpine
+        restart: unless-stopped
+        ports:
+          - ${DATABASE_POSTGRES_PORT}:5432 # for local development
+        volumes:
+          - postgres-data:/var/lib/postgresql/data
         environment:
             POSTGRES_USER: ${DATABASE_POSTGRES_USER}
             POSTGRES_PASSWORD: ${DATABASE_POSTGRES_PASSWORD}
             POSTGRES_DB: ${DATABASE_POSTGRES_DB}
-        volumes:
-          - postgres-data:/var/lib/postgresql/data
-        restart: unless-stopped
-        ports:
-            - ${DATABASE_POSTGRES_PORT}:5432 # for local development
     redis:
         image: redis:6.2-alpine
         restart: unless-stopped 
@@ -25,6 +25,8 @@ services:
         ports:
             - ${API_SERVER_PORT}:8080
             - 5555:5555 # for local development
+        volumes:
+            - ./keys:/usr/src/app/keys
         environment:
             SERVER_URL: ${API_SERVER_URL}
             APP_DOMAINS: ${API_APP_DOMAINS}
