improve env stuff and dashboard

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -9,5 +9,6 @@ DATABASE_URL=PLACEHOLDER_DATABASE_URL
 
 # api
 API_SERVER_URL=PLACEHOLDER_API_SERVER_URL
+API_SERVER_PORT=PLACEHOLDER_API_SERVER_PORT
 API_APP_DOMAINS=PLACEHOLDER_API_APP_DOMAINS
 API_DATABASE_URL=PLACEHOLDER_API_DATABASE_URL
