--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "base64url": "^3.0.1",
     "body-parser": "^1.19.2",
     "compression": "^1.7.4",
+    "connect-history-api-fallback": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.0",
