--- a/backend/dashboard/package.json
+++ b/backend/dashboard/package.json
@@ -17,6 +17,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "datatables.net-dt": "^2.1.7",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
