--- a/backend/dashboard/package.json
+++ b/backend/dashboard/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "datatables.net-dt": "^2.1.7",
