--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: ./backend
-        platforms: linux/arm64/v8
+        platforms: linux/arm64/v8, linux/amd64, linux/arm64
         push: true
         tags: ghcr.io/lmarschall/wembat-api:latest
   
@@ -53,6 +53,6 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: ./backend/dashboard
-        platforms: linux/arm64/v8
+        platforms: linux/arm64/v8, linux/amd64, linux/arm64
         push: true
         tags: ghcr.io/lmarschall/wembat-dashboard:latest
