update template file

--- a/setup/.env.template
+++ b/setup/.env.template
@@ -11,3 +11,7 @@ DATABASE_URL=PLACEHOLDER_DATABASE_URL
 API_SERVER_URL=PLACEHOLDER_API_SERVER_URL
 API_SERVER_PORT=PLACEHOLDER_API_SERVER_PORT
 API_DATABASE_URL=PLACEHOLDER_API_DATABASE_URL
+
+# dashboard
+DASHBOARD_SERVER_URL=PLACEHOLDER_DASHBOARD_SERVER_URL
+DASHBOARD_SERVER_PORT=PLACEHOLDER_DASHBOARD_SERVER_PORT
