--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -2,6 +2,8 @@
 volumes:
   postgres-data:
     driver: local
+  api-data:
+    driver: local
 
 services:
     postgres:
@@ -36,7 +38,7 @@ services:
             - ${API_SERVER_PORT}:8080
             - 5555:5555 # for local development
         volumes:
-            - ./keys:/usr/src/app/keys
+            - api-data:/opt/data
         environment:
             SERVER_URL: ${API_SERVER_URL}
             APP_DOMAINS: ${API_APP_DOMAINS}
