--- a/vue-example/package.json
+++ b/vue-example/package.json
@@ -10,7 +10,6 @@
     "format": "prettier .  --write"
   },
   "dependencies": {
-    "@simplewebauthn/browser": "^8.0.2",
     "@wembat/client": "file:..",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.2",
@@ -18,10 +17,10 @@
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
-    "@simplewebauthn/typescript-types": "^7.4.0",
     "@types/bootstrap": "^5.2.9",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
+    "@vitejs/plugin-basic-ssl": "^1.1.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/eslint-config-typescript": "^11.0.2",
     "eslint": "^8.24.0",
