--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -30,6 +30,8 @@ services:
           driver: none
         ports:
             - ${DASHBOARD_SERVER_PORT}:8080
+        environment:
+            VITE_API_URL: ${API_SERVER_URL}
     api:
         image: wembat-api
         build: "./"
