--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -7,7 +7,7 @@ volumes:
 
 services:
     postgres:
-        image: postgres:13-alpine
+        image: postgres:14-alpine
         restart: unless-stopped
         ports:
           - ${DATABASE_POSTGRES_PORT}:5432 # for local development
@@ -25,13 +25,13 @@ services:
         build:
             context: ./dashboard
             dockerfile: Dockerfile
+            args:
+                VITE_API_URL: ${API_SERVER_URL}
         restart: unless-stopped
         logging:
           driver: none
         ports:
             - ${DASHBOARD_SERVER_PORT}:8080
-        environment:
-            VITE_API_URL: ${API_SERVER_URL}
     api:
         image: wembat-api
         build: "./"
