--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,29 +30,29 @@ jobs:
         push: true
         tags: ghcr.io/lmarschall/wembat-api:latest
   
-  # publish-wembat-dashboard-image:
-  #   runs-on: ubuntu-latest
+  publish-wembat-dashboard-image:
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #   - uses: actions/checkout@v2
+    steps:
+    - uses: actions/checkout@v2
 
-  #   - name: Set up QEMU
-  #     uses: docker/setup-qemu-action@v1
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
     
-  #   - name: Set up Docker Buildx
-  #     uses: docker/setup-buildx-action@v1
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
 
-  #   - name: login to github container registry
-  #     uses: docker/login-action@v1
-  #     with:
-  #       registry: ghcr.io
-  #       username: ${{ github.actor }}
-  #       password: ${{ secrets.GITHUB_TOKEN }}
+    - name: login to github container registry
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
-  #   - name: build and push pwahub-api docker image
-  #     uses: docker/build-push-action@v2
-  #     with:
-  #       context: ./backend/dashboard
-  #       platforms: linux/arm64/v8, linux/amd64, linux/arm64
-  #       push: true
-  #       tags: ghcr.io/lmarschall/wembat-dashboard:latest
+    - name: build and push pwahub-api docker image
+      uses: docker/build-push-action@v2
+      with:
+        context: ./backend/dashboard
+        platforms: linux/arm64/v8, linux/amd64, linux/arm64
+        push: true
+        tags: ghcr.io/lmarschall/wembat-dashboard:latest
