--- a/setup/docker-compose.yml
+++ b/setup/docker-compose.yml
@@ -7,7 +7,7 @@ volumes:
 
 services:
     postgres:
-        image: postgres:13-alpine
+        image: postgres:14-alpine
         restart: unless-stopped
         ports:
           - ${DATABASE_POSTGRES_PORT}:5432 # for local development
@@ -39,5 +39,6 @@ services:
             DATABASE_URL: ${API_DATABASE_URL}
             DATABASE_USER: ${DATABASE_POSTGRES_USER}
             DASHBOARD_URL: ${DASHBOARD_SERVER_URL}
+            DATABASE_HOST: postgres
             REDIS_HOST: redis
             REDIS_PORT: 6379
