--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,6 +6,7 @@
       "moduleResolution": "node",
       "sourceMap": true,
       "outDir": "dist",
+      "strict": true
     },
     "lib": ["es2015"],
     "include": [
