--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,12 +1,14 @@
 {
     "compilerOptions": {
       "module": "commonjs",
-      "esModuleInterop": true,
       "target": "es6",
       "moduleResolution": "node",
-      "sourceMap": true,
       "outDir": "dist",
-      "strict": true
+      "esModuleInterop": true,
+      "sourceMap": true,
+      "strict": true,
+      "forceConsistentCasingInFileNames": true,
+      "types": ["node", "jest"]
     },
     "lib": ["es2015"],
     "include": [
