--- a/backend/package.json
+++ b/backend/package.json
@@ -38,18 +38,18 @@
   "devDependencies": {
     "@simplewebauthn/types": "^11.0.0",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.9.0",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.0.0",
     "prettier": "2.7.1",
     "prisma": "^3.13.0",
+    "ts-jest": "^29.0.0",
     "ts-node": "^10.5.0",
-    "typescript": "^4.5.5",
-    "jest": "^29.0.0",
-    "@types/jest": "^29.0.0",
-    "ts-jest": "^29.0.0"
+    "typescript": "^4.5.5"
   }
 }
