--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,8 @@
   },
   "devDependencies": {
     "@simplewebauthn/types": "^11.0.0",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.9.0",
