--- a/.github/workflows/test-frontend.yml
+++ b/.github/workflows/test-frontend.yml
@@ -22,4 +22,4 @@ jobs:
         run: npm install
 
       - name: Run tests
-        run: npx vitest ./src/funtions/
+        run: npx vitest ./funtions/
