--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "wembat",
   "private": true,
-  "workspaces": ["workspaces/*"],
+  "workspaces": [
+    "workspaces/*"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix ./src/**/*.ts",
     "format": "prettier ./src/**/*.ts --write",
-    "prepublish": "npm run build",
     "test": "vitest ./src/functions/*.test.ts",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
@@ -33,6 +34,7 @@
     "vite": "^6.2.6",
     "vite-plugin-dts": "^4.2.4",
     "vitepress": "^1.6.3",
-    "vitest": "^3.0.9"
+    "vitest": "^3.0.9",
+    "@vitejs/plugin-basic-ssl": "^2.0.0"
   }
 }
