--- a/workspaces/demo/package.json
+++ b/workspaces/demo/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@wembat/client": "file:..",
+    "@wembat/client": "../client",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.2",
     "vue": "^3.2.25",
