include original ts config files

--- a/workspaces/dashboard/tsconfig.json
+++ b/workspaces/dashboard/tsconfig.json
@@ -1,4 +1,14 @@
 {
-    "extends": "../../tsconfig.json",
-    "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-  }
+  "files": [],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    },
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.vitest.json"
+    }
+  ]
+}
