--- a/package.json
+++ b/package.json
@@ -17,14 +17,23 @@
   },
   "devDependencies": {
     "@simplewebauthn/types": "^11.0.0",
+    "@types/bootstrap": "^5.2.10",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.9.0",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
+    "@vitejs/plugin-basic-ssl": "^2.0.0",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "gzipper": "^7.1.0",
+    "jest": "^29.0.0",
     "prettier": "2.7.1",
+    "prisma": "^3.13.0",
+    "ts-jest": "^29.0.0",
     "typedoc": "^0.25.6",
     "typedoc-plugin-markdown": "^4.0.0-next.38",
     "typedoc-vitepress-theme": "^1.0.0-next.4",
@@ -33,7 +42,6 @@
     "vite-plugin-dts": "^4.2.4",
     "vitepress": "^1.6.3",
     "vitest": "^3.0.9",
-    "@vitejs/plugin-basic-ssl": "^2.0.0",
     "vue-tsc": "^0.34.7"
   }
 }
