--- a/workspaces/server/Dockerfile
+++ b/workspaces/server/Dockerfile
@@ -5,13 +5,17 @@ FROM node:20 AS build
 WORKDIR /usr/src/build
 
 # copy both 'package.json' and 'package-lock.json'
-COPY package*.json ./
+COPY ./package*.json ./
+COPY ./workspaces/server/package*.json ./workspaces/server/
 
 # install project dependencies
 RUN npm ci
 
+# move to the server workspace
+WORKDIR /usr/src/build/workspaces/server
+
 # copy source files
-COPY . .
+COPY ./workspaces/server/ .
 
 # generate prisma models for prisma client
 RUN npx prisma generate
@@ -34,7 +38,7 @@ RUN apt-get update && apt-get install -y \
 VOLUME /opt/data
 
 # set environment variables
-ENV NODE_ENV production
+ENV NODE_ENV=production
 
 # create node user
 USER node
@@ -43,16 +47,16 @@ USER node
 WORKDIR /usr/src/app
 
 # copy both 'package.json' and 'package-lock.json'
-COPY package*.json /usr/src/app/
+COPY ./workspaces/server/package*.json /usr/src/app/
 
 # install project dependencies
 RUN npm ci --omit=dev
 
 # copy build files from build stage
-COPY --chown=node:node --from=build /usr/src/build/dist /usr/src/app/dist
-COPY --chown=node:node --from=build /usr/src/build/prisma /usr/src/app/prisma
-COPY --chown=node:node --from=build /usr/src/build/node_modules/.prisma /usr/src/app/node_modules/.prisma
-COPY --chown=node:node --from=build /usr/src/build/entrypoint.sh /usr/src/app/entrypoint.sh
+COPY --chown=node:node --from=build /usr/src/build/workspaces/server/dist /usr/src/app/dist
+COPY --chown=node:node --from=build /usr/src/build/workspaces/server/prisma /usr/src/app/prisma
+COPY --chown=node:node --from=build /usr/src/build/workspaces/server/node_modules/.prisma /usr/src/app/node_modules/.prisma
+COPY --chown=node:node --from=build /usr/src/build//workspaces/server/entrypoint.sh /usr/src/app/entrypoint.sh
 
 # expose api port
 EXPOSE 8080
