--- a/workspaces/server/package.json
+++ b/workspaces/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wembat/backend",
+  "name": "@wembat/server",
   "version": "0.9.0",
   "description": "",
   "main": "index.js",
@@ -11,16 +11,6 @@
     "format": "prettier ./src/**/*.ts --write",
     "test": "jest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lmarschall/pwahub.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/lmarschall/pwahub/issues"
-  },
-  "homepage": "https://github.com/lmarschall/pwahub#readme",
   "dependencies": {
     "@prisma/client": "^3.13.0",
     "@simplewebauthn/server": "^11.0.0",
@@ -34,24 +24,5 @@
     "helmet": "^5.0.2",
     "jose": "^4.15.5",
     "redis": "^4.0.6"
-  },
-  "devDependencies": {
-    "@simplewebauthn/types": "^11.0.0",
-    "@types/compression": "^1.7.5",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^20.9.0",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.39.0",
-    "eslint": "^8.24.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.0.0",
-    "prettier": "2.7.1",
-    "prisma": "^3.13.0",
-    "ts-jest": "^29.0.0",
-    "ts-node": "^10.5.0",
-    "typescript": "^4.5.5"
   }
 }
