--- a/.github/workflows/test-client.yml
+++ b/.github/workflows/test-client.yml
@@ -5,9 +5,6 @@ on: [push]
 jobs:
   test-wembat-frontend:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: "./"
 
     steps:
       - name: Checkout repository
@@ -23,3 +20,4 @@ jobs:
 
       - name: Run tests
         run: npm run test
+          working-directory: "./workspaces/client"
