--- a/.github/workflows/test-server.yml
+++ b/.github/workflows/test-server.yml
@@ -5,9 +5,6 @@ on: [push]
 jobs:
   test-wembat-backend:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: "./backend"
 
     steps:
       - name: Checkout repository
@@ -18,8 +15,9 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Install dependencies
+      - name: Install dependencies in root
         run: npm install
 
-      - name: Run tests
+      - name: Run tests in server workspace
         run: npm run test
+          working-directory: "./workspaces/server"
