--- a/.github/workflows/test-server.yml
+++ b/.github/workflows/test-server.yml
@@ -1,9 +1,9 @@
-name: test-backend
+name: test-server
 
 on: [push]
 
 jobs:
-  test-wembat-backend:
+  test-wembat-server:
     runs-on: ubuntu-latest
 
     steps:
