--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: publish
 on: [release]
 
 jobs:
-  publish-wembat-api-image:
+  publish-wembat-server-image:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,13 +22,14 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: build and push pwahub-api docker image
+    - name: build and push wembat-server docker image
       uses: docker/build-push-action@v2
       with:
-        context: ./backend
+        context: .
+        file: ./workspaces/server/Dockerfile
         platforms: linux/arm64/v8, linux/amd64, linux/arm64
         push: true
-        tags: ghcr.io/lmarschall/wembat-api:latest
+        tags: ghcr.io/lmarschall/wembat-server:latest
   
   publish-wembat-dashboard-image:
     runs-on: ubuntu-latest
@@ -52,7 +53,8 @@ jobs:
     - name: build and push pwahub-api docker image
       uses: docker/build-push-action@v2
       with:
-        context: ./backend/dashboard
+        context: .
+        file: ./workspaces/dashboard/Dockerfile
         platforms: linux/arm64/v8, linux/amd64, linux/arm64
         push: true
         tags: ghcr.io/lmarschall/wembat-dashboard:latest
