--- a/workspaces/dashboard/package.json
+++ b/workspaces/dashboard/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "datatables.net-dt": "^2.1.7",
+    "mitt": "^3.0.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
