--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "prettier": "2.7.1",
     "prisma": "^3.13.0",
     "ts-jest": "^29.0.0",
-    "typedoc": "^0.25.6",
-    "typedoc-plugin-markdown": "^4.0.0-next.38",
-    "typedoc-vitepress-theme": "^1.0.0-next.4",
-    "typescript": "^4.5.4",
+    "typedoc": "^0.28.13",
+    "typedoc-plugin-markdown": "^4.9.0",
+    "typedoc-vitepress-theme": "^1.1.2",
+    "ts-node": "^10.9.0",
+    "typescript": "^5.6.0",
     "vite": "^6.3.3",
     "vite-plugin-dts": "^4.2.4",
     "vitepress": "^1.6.3",
