--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.9.0",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.39.0",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
     "@vitejs/plugin-basic-ssl": "^2.0.0",
-    "eslint": "^8.24.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint": "^9.15.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "gzipper": "^7.1.0",
     "jest": "^29.0.0",
-    "prettier": "2.7.1",
-    "prisma": "^3.13.0",
+    "prettier": "^3.3.3",
+    "prisma": "^5.22.0",
     "ts-jest": "^29.0.0",
     "typedoc": "^0.28.13",
     "typedoc-plugin-markdown": "^4.9.0",
@@ -40,6 +40,6 @@
     "vite-plugin-dts": "^4.2.4",
     "vitepress": "^1.6.3",
     "vitest": "^3.0.9",
-    "vue-tsc": "^0.34.7"
+    "vue-tsc": "^2.1.14"
   }
 }
