--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
     "@vitejs/plugin-basic-ssl": "^2.0.0",
+    "@vitejs/plugin-vue": "^6.0.1",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -31,10 +32,10 @@
     "prettier": "^3.3.3",
     "prisma": "^5.22.0",
     "ts-jest": "^29.0.0",
+    "ts-node": "^10.9.0",
     "typedoc": "^0.28.13",
     "typedoc-plugin-markdown": "^4.9.0",
     "typedoc-vitepress-theme": "^1.1.2",
-    "ts-node": "^10.9.0",
     "typescript": "^5.6.0",
     "vite": "^7.1.9",
     "vite-plugin-dts": "^4.2.4",
